--- a/app/src/main/res/menu/main_nav.xml
+++ b/app/src/main/res/menu/main_nav.xml
@@ -3,19 +3,11 @@
     <item
         android:id="@+id/nav_animelib"
         android:icon="@drawable/ic_animelibrary_selector_24dp"
-        android:title="@string/label_animelib" />
-    <item
-        android:id="@+id/nav_library"
-        android:icon="@drawable/ic_library_selector_24dp"
-        android:title="@string/label_manga" />
+        android:title="@string/pref_category_library" />
     <item
         android:id="@+id/nav_updates"
         android:icon="@drawable/ic_updates_selector_24dp"
-        android:title="@string/label_recent_updates" />
-    <!--<item
-        android:id="@+id/nav_history"
-        android:icon="@drawable/ic_history_24dp"
-        android:title="@string/label_recent_manga" />-->
+        android:title="@string/label_recents" />
     <item
         android:id="@+id/nav_browse"
         android:icon="@drawable/ic_browse_selector_24dp"
